spacing fixes

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -929,7 +929,6 @@ div.twitter-profile-pic {
 
 label, .contactform label, .advancedcontactform label {
     width: 100%;
-    float: left;
     font-family:@font-swatch5-font-family;
     font-size:@font-swatch5-font-size;
     font-weight:@font-swatch5-font-weight;
@@ -948,8 +947,6 @@ input, .contactform input, .contactform select,
     font-size: @font-swatch5-font-size;
     color: @color-swatch5;
     text-indent: 10px;
-    margin-top: 6px;
-    margin-bottom: 20px;
     padding: 0;
     border: 1px solid darken(@color-swatch3, 10%);
     &:hover {
@@ -971,8 +968,6 @@ input, .contactform input, .contactform select,
     color: @font-swatch5-color;
     text-indent: 10px;
     padding-top: 10px;
-    margin-top: 6px;
-    margin-bottom: 20px;
     resize: vertical;
     overflow: auto;
     border: 1px solid darken(@color-swatch3, 10%);
